@startuml

title __EASYPLAN.APP's Class Diagram__\n

  namespace com.example.easyplan {
    class com.example.easyplan.BuildConfig {
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.EndPlanActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.ForgotPasswordActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.LoginActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.MakePlanActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.RegisterActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.RegisterByTargetActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.RegisterByTypeActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.RegisterTraineeActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.RegisterTrainerActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.SplashScreenActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.TraineeHomepageActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.TraineeListActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.TrainerHomepageActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace activities {
      class com.example.easyplan.activities.TrainerListActivity {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace adapters {
      class com.example.easyplan.adapters.TraineeListAdapter {
      }
    }
  }
  

  namespace com.example.easyplan {
    namespace adapters {
      class com.example.easyplan.adapters.TrainerListAdapter {
      }
    }
  }
  

  com.example.easyplan.activities.EndPlanActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.ForgotPasswordActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.MakePlanActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.RegisterByTargetActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.RegisterByTypeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.RegisterTraineeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.RegisterTrainerActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.SplashScreenActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.TraineeHomepageActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.TraineeListActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.TrainerHomepageActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.activities.TrainerListActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.easyplan.adapters.TraineeListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.easyplan.adapters.TrainerListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
